syntax = "proto3";

package user_center;

option go_package = "./v1;v1";

import "validate/validate.proto";
import "google/protobuf/any.proto";

message UserExtra {
  uint32 id = 1;
  uint32 user_id = 2;
  string keyword = 3;
  string type = 4;
  google.protobuf.Any value = 5;
  uint32 created_at = 6;
}

message AllUserExtraRequest {
  uint32 user_id = 1[(validate.rules).uint32 = {gt:0}];
}

message AllUserExtraReply {
  repeated UserExtra list = 1;
}

message AddUserExtraRequest {
  uint32 user_id = 1[(validate.rules).uint32 = {gt:0}];
  string keyword = 2[(validate.rules).string = {min_len:0}];
  string type = 3[(validate.rules).string = {min_len:0}];
  google.protobuf.Any value = 4[(validate.rules).any = {required:true}];
}

message DeleteUserExtraRequest{
  uint32 user_id = 1[(validate.rules).uint32 = {gt:0}];
  string keyword = 2[(validate.rules).string = {min_len:1}];
}